exports[`Webpack loader compiles with Babel without issue 1`] = `
"\'use strict\';

Object.defineProperty(exports, \"__esModule\", {
  value: true
});

var _react = require(\'react\');

var _react2 = _interopRequireDefault(_react);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

function MarkdownComponent(props) {
  var className = props.className;
  var style = props.style;
  var elementProps = props.elementProps;


  return _react2.default.createElement(
    \'div\',
    { className: className, style: style },
    _react2.default.createElement(
      \'h1\',
      elementProps[\'h1\'],
      \'Basic Markdown Template\'
    ),
    _react2.default.createElement(
      \'p\',
      elementProps[\'p\'],
      \'This is a basic Markdown template, with no interpolations going on.\'
    ),
    _react2.default.createElement(
      \'p\',
      elementProps[\'p\'],
      \'This should be\'
    ),
    _react2.default.createElement(
      \'ul\',
      elementProps[\'ul\'],
      _react2.default.createElement(
        \'li\',
        elementProps[\'li\'],
        \'easy and;\'
      ),
      _react2.default.createElement(
        \'li\',
        elementProps[\'li\'],
        \'predictable!\'
      )
    )
  );
} // Module generated from Markdown by markdown-component-loader v0.0.2
;

MarkdownComponent.propTypes = {
  className: _react2.default.PropTypes.string,
  style: _react2.default.PropTypes.object,
  elementProps: _react2.default.PropTypes.object
};

MarkdownComponent.defaultProps = {
  elementProps: {}
};

exports.default = MarkdownComponent;"
`;

exports[`Webpack loader compiles with Babel without issue 2`] = `
"\'use strict\';

Object.defineProperty(exports, \"__esModule\", {
  value: true
});

var _extends = Object.assign || function (target) { for (var i = 1; i < arguments.length; i++) { var source = arguments[i]; for (var key in source) { if (Object.prototype.hasOwnProperty.call(source, key)) { target[key] = source[key]; } } } return target; }; // Module generated from Markdown by markdown-component-loader v0.0.2


var _react = require(\'react\');

var _react2 = _interopRequireDefault(_react);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

function MarkdownComponent(props) {
  var className = props.className;
  var style = props.style;
  var elementProps = props.elementProps;


  return _react2.default.createElement(
    \'div\',
    { className: className, style: style },
    _react2.default.createElement(
      \'h1\',
      elementProps[\'h1\'],
      \'Here\\\'s a code snippet with no interpolations\'
    ),
    _react2.default.createElement(
      \'pre\',
      elementProps[\'pre\'],
      _react2.default.createElement(
        \'code\',
        _extends({}, elementProps[\'code\'], { className: \'language-bash\' }),
        \'npm install -g yarn\',
        _react2.default.createElement(\'br\', elementProps[\'br\'])
      )
    )
  );
};

MarkdownComponent.propTypes = {
  className: _react2.default.PropTypes.string,
  style: _react2.default.PropTypes.object,
  elementProps: _react2.default.PropTypes.object
};

MarkdownComponent.defaultProps = {
  elementProps: {}
};

exports.default = MarkdownComponent;"
`;

exports[`Webpack loader compiles with Babel without issue 3`] = `
"\'use strict\';

Object.defineProperty(exports, \"__esModule\", {
  value: true
});

var _extends = Object.assign || function (target) { for (var i = 1; i < arguments.length; i++) { var source = arguments[i]; for (var key in source) { if (Object.prototype.hasOwnProperty.call(source, key)) { target[key] = source[key]; } } } return target; }; // Module generated from Markdown by markdown-component-loader v0.0.2


var _react = require(\'react\');

var _react2 = _interopRequireDefault(_react);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

function MarkdownComponent(props) {
  var className = props.className;
  var style = props.style;
  var elementProps = props.elementProps;


  return _react2.default.createElement(
    \'div\',
    { className: className, style: style },
    _react2.default.createElement(
      \'h1\',
      elementProps[\'h1\'],
      \'Here\\\'s a code snippet with things which shouldn\\\'t be treated as interpolations\'
    ),
    _react2.default.createElement(
      \'pre\',
      elementProps[\'pre\'],
      _react2.default.createElement(
        \'code\',
        _extends({}, elementProps[\'code\'], { className: \'language-bash\' }),
        _react2.default.createElement(
          \'span\',
          _extends({}, elementProps[\'span\'], { className: \'hljs-keyword\' }),
          \'function\'
        ),
        \' \',
        _react2.default.createElement(
          \'span\',
          _extends({}, elementProps[\'span\'], { className: \'hljs-function\' }),
          _react2.default.createElement(
            \'span\',
            _extends({}, elementProps[\'span\'], { className: \'hljs-title\' }),
            \'rbenv\'
          )
        ),
        \'() \',
        \'{\',
        _react2.default.createElement(\'br\', elementProps[\'br\']),
        \'  RUBY=blah\',
        _react2.default.createElement(\'br\', elementProps[\'br\']),
        \'}\',
        _react2.default.createElement(\'br\', elementProps[\'br\'])
      )
    )
  );
};

MarkdownComponent.propTypes = {
  className: _react2.default.PropTypes.string,
  style: _react2.default.PropTypes.object,
  elementProps: _react2.default.PropTypes.object
};

MarkdownComponent.defaultProps = {
  elementProps: {}
};

exports.default = MarkdownComponent;"
`;

exports[`Webpack loader compiles with Babel without issue 4`] = `
"\'use strict\';

Object.defineProperty(exports, \"__esModule\", {
  value: true
});

var _react = require(\'react\');

var _react2 = _interopRequireDefault(_react);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

function MarkdownComponent(props) {
  var className = props.className;
  var style = props.style;
  var elementProps = props.elementProps;


  return _react2.default.createElement(
    \'div\',
    { className: className, style: style },
    _react2.default.createElement(
      \'h1\',
      elementProps[\'h1\'],
      \'Here\\\'s a paragraph with a simple interpolation\'
    ),
    _react2.default.createElement(
      \'p\',
      elementProps[\'p\'],
      \'There are \',
      Object.keys(props).length,
      \' props being supplied to this component.\'
    )
  );
} // Module generated from Markdown by markdown-component-loader v0.0.2
;

MarkdownComponent.propTypes = {
  className: _react2.default.PropTypes.string,
  style: _react2.default.PropTypes.object,
  elementProps: _react2.default.PropTypes.object
};

MarkdownComponent.defaultProps = {
  elementProps: {}
};

exports.default = MarkdownComponent;"
`;

exports[`Webpack loader compiles with Babel without issue 5`] = `
"\'use strict\';

Object.defineProperty(exports, \"__esModule\", {
  value: true
});

var _extends = Object.assign || function (target) { for (var i = 1; i < arguments.length; i++) { var source = arguments[i]; for (var key in source) { if (Object.prototype.hasOwnProperty.call(source, key)) { target[key] = source[key]; } } } return target; }; // Module generated from Markdown by markdown-component-loader v0.0.2


var _react = require(\'react\');

var _react2 = _interopRequireDefault(_react);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

function MarkdownComponent(props) {
  var className = props.className;
  var style = props.style;
  var elementProps = props.elementProps;


  return _react2.default.createElement(
    \'div\',
    { className: className, style: style },
    _react2.default.createElement(
      \'h1\',
      elementProps[\'h1\'],
      \'Here\\\'s a code snippet with a simple interpolation\'
    ),
    _react2.default.createElement(
      \'pre\',
      elementProps[\'pre\'],
      _react2.default.createElement(
        \'code\',
        _extends({}, elementProps[\'code\'], { className: \'language-bash\' }),
        _react2.default.createElement(
          \'span\',
          _extends({}, elementProps[\'span\'], { className: \'hljs-keyword\' }),
          \'function\'
        ),
        \' \',
        _react2.default.createElement(
          \'span\',
          _extends({}, elementProps[\'span\'], { className: \'hljs-function\' }),
          _react2.default.createElement(
            \'span\',
            _extends({}, elementProps[\'span\'], { className: \'hljs-title\' }),
            \'rbenv\'
          )
        ),
        \'() \',
        \'{\',
        _react2.default.createElement(\'br\', elementProps[\'br\']),
        \'  RUBY=\',
        props.rubycontent,
        _react2.default.createElement(\'br\', elementProps[\'br\']),
        \'}\',
        _react2.default.createElement(\'br\', elementProps[\'br\'])
      )
    )
  );
};

MarkdownComponent.propTypes = {
  className: _react2.default.PropTypes.string,
  style: _react2.default.PropTypes.object,
  elementProps: _react2.default.PropTypes.object
};

MarkdownComponent.defaultProps = {
  elementProps: {}
};

exports.default = MarkdownComponent;"
`;

exports[`Webpack loader compiles with Babel without issue 6`] = `
"\'use strict\';

Object.defineProperty(exports, \"__esModule\", {
  value: true
});

var _extends = Object.assign || function (target) { for (var i = 1; i < arguments.length; i++) { var source = arguments[i]; for (var key in source) { if (Object.prototype.hasOwnProperty.call(source, key)) { target[key] = source[key]; } } } return target; }; // Module generated from Markdown by markdown-component-loader v0.0.2


var _react = require(\'react\');

var _react2 = _interopRequireDefault(_react);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

function MarkdownComponent(props) {
  var className = props.className;
  var style = props.style;
  var elementProps = props.elementProps;


  return _react2.default.createElement(
    \'div\',
    { className: className, style: style },
    _react2.default.createElement(
      \'h1\',
      elementProps[\'h1\'],
      \'Here\\\'s an unhinted code snippet\'
    ),
    _react2.default.createElement(
      \'pre\',
      elementProps[\'pre\'],
      _react2.default.createElement(
        \'code\',
        elementProps[\'code\'],
        _react2.default.createElement(
          \'span\',
          _extends({}, elementProps[\'span\'], { className: \'hljs-keyword\' }),
          \'the\'
        ),
        \' quick brown fox jumps over \',
        _react2.default.createElement(
          \'span\',
          _extends({}, elementProps[\'span\'], { className: \'hljs-keyword\' }),
          \'the\'
        ),
        \' lazy dog\',
        _react2.default.createElement(\'br\', elementProps[\'br\'])
      )
    )
  );
};

MarkdownComponent.propTypes = {
  className: _react2.default.PropTypes.string,
  style: _react2.default.PropTypes.object,
  elementProps: _react2.default.PropTypes.object
};

MarkdownComponent.defaultProps = {
  elementProps: {}
};

exports.default = MarkdownComponent;"
`;

exports[`Webpack loader compiles with Babel without issue 7`] = `
"\'use strict\';

Object.defineProperty(exports, \"__esModule\", {
  value: true
});

var _extends = Object.assign || function (target) { for (var i = 1; i < arguments.length; i++) { var source = arguments[i]; for (var key in source) { if (Object.prototype.hasOwnProperty.call(source, key)) { target[key] = source[key]; } } } return target; }; // Module generated from Markdown by markdown-component-loader v0.0.2


var _react = require(\'react\');

var _react2 = _interopRequireDefault(_react);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

function MarkdownComponent(props) {
  var className = props.className;
  var style = props.style;
  var elementProps = props.elementProps;


  return _react2.default.createElement(
    \'div\',
    { className: className, style: style },
    _react2.default.createElement(
      \'h1\',
      elementProps[\'h1\'],
      \'Here\\\'s an unhinted snippet with no discernible language\'
    ),
    _react2.default.createElement(
      \'pre\',
      elementProps[\'pre\'],
      _react2.default.createElement(
        \'code\',
        elementProps[\'code\'],
        \')\',
        _react2.default.createElement(
          \'span\',
          _extends({}, elementProps[\'span\'], { className: \'hljs-comment\' }),
          \'()\'
        ),
        _react2.default.createElement(
          \'span\',
          _extends({}, elementProps[\'span\'], { className: \'hljs-comment\' }),
          \'(()\'
        ),
        \')\',
        _react2.default.createElement(\'br\', elementProps[\'br\'])
      )
    )
  );
};

MarkdownComponent.propTypes = {
  className: _react2.default.PropTypes.string,
  style: _react2.default.PropTypes.object,
  elementProps: _react2.default.PropTypes.object
};

MarkdownComponent.defaultProps = {
  elementProps: {}
};

exports.default = MarkdownComponent;"
`;

exports[`Webpack loader compiles with Babel without issue 8`] = `
"\'use strict\';

Object.defineProperty(exports, \"__esModule\", {
  value: true
});

var _extends = Object.assign || function (target) { for (var i = 1; i < arguments.length; i++) { var source = arguments[i]; for (var key in source) { if (Object.prototype.hasOwnProperty.call(source, key)) { target[key] = source[key]; } } } return target; }; // Module generated from Markdown by markdown-component-loader v0.0.2


var _react = require(\'react\');

var _react2 = _interopRequireDefault(_react);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

function MarkdownComponent(props) {
  var className = props.className;
  var style = props.style;
  var elementProps = props.elementProps;


  return _react2.default.createElement(
    \'div\',
    { className: className, style: style },
    _react2.default.createElement(
      \'h1\',
      elementProps[\'h1\'],
      \'Markdown Template\'
    ),
    _react2.default.createElement(
      \'p\',
      elementProps[\'p\'],
      \'This is a \',
      \'{Markdown}\',
      \' template!!! \',
      props.foo || \'{bar}\'
    ),
    _react2.default.createElement(
      \'pre\',
      elementProps[\'pre\'],
      _react2.default.createElement(
        \'code\',
        _extends({}, elementProps[\'code\'], { className: \'language-bash\' }),
        \'brew tap buildkite/buildkite\',
        _react2.default.createElement(\'br\', elementProps[\'br\']),
        \'brew install --token=\',
        _react2.default.createElement(
          \'span\',
          _extends({}, elementProps[\'span\'], { className: \'hljs-string\' }),
          \'\\\'\',
          props.token || \'INSERT-YOUR-AGENT-TOKEN-HERE\',
          \'\\\'\'
        ),
        \' buildkite-agent\',
        _react2.default.createElement(\'br\', elementProps[\'br\']),
        _react2.default.createElement(
          \'span\',
          _extends({}, elementProps[\'span\'], { className: \'hljs-function\' }),
          _react2.default.createElement(
            \'span\',
            _extends({}, elementProps[\'span\'], { className: \'hljs-title\' }),
            \'function\'
          )
        ),
        \'() \',
        \'{\',
        _react2.default.createElement(\'br\', elementProps[\'br\']),
        \'  ENV=\',
        _react2.default.createElement(
          \'span\',
          _extends({}, elementProps[\'span\'], { className: \'hljs-string\' }),
          \'\"foo_bar\"\'
        ),
        _react2.default.createElement(\'br\', elementProps[\'br\']),
        \'}\',
        _react2.default.createElement(\'br\', elementProps[\'br\'])
      )
    )
  );
};

MarkdownComponent.propTypes = {
  className: _react2.default.PropTypes.string,
  style: _react2.default.PropTypes.object,
  elementProps: _react2.default.PropTypes.object
};

MarkdownComponent.defaultProps = {
  elementProps: {}
};

exports.default = MarkdownComponent;"
`;

exports[`Webpack loader compiles with Babel without issue 9`] = `
"\'use strict\';

Object.defineProperty(exports, \"__esModule\", {
  value: true
});

var _extends = Object.assign || function (target) { for (var i = 1; i < arguments.length; i++) { var source = arguments[i]; for (var key in source) { if (Object.prototype.hasOwnProperty.call(source, key)) { target[key] = source[key]; } } } return target; }; // Module generated from Markdown by markdown-component-loader v0.0.2


var _react = require(\'react\');

var _react2 = _interopRequireDefault(_react);

var _foo = require(\'foo\');

var _foo2 = _interopRequireDefault(_foo);

var _another = require(\'another\');

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

function MarkdownComponent(props) {
  var className = props.className;
  var style = props.style;
  var elementProps = props.elementProps;


  return _react2.default.createElement(
    \'div\',
    { className: className, style: style },
    _react2.default.createElement(
      \'h1\',
      elementProps[\'h1\'],
      \'Markdown template with imports and interpolations\'
    ),
    _react2.default.createElement(
      \'p\',
      elementProps[\'p\'],
      \'We\\\'re importing foo, which is \',
      _foo2.default,
      \'.\'
    ),
    _react2.default.createElement(
      \'p\',
      elementProps[\'p\'],
      \'We\\\'re also adding a react component here: \',
      _react2.default.createElement(_another.foo, _extends({}, _another.baz, { style: { foo: \'bar\' } }))
    )
  );
};

MarkdownComponent.propTypes = {
  className: _react2.default.PropTypes.string,
  style: _react2.default.PropTypes.object,
  elementProps: _react2.default.PropTypes.object
};

MarkdownComponent.defaultProps = {
  elementProps: {}
};

exports.default = MarkdownComponent;"
`;

exports[`Webpack loader compiles with Babel without issue 10`] = `
"\'use strict\';

Object.defineProperty(exports, \"__esModule\", {
  value: true
});

var _extends = Object.assign || function (target) { for (var i = 1; i < arguments.length; i++) { var source = arguments[i]; for (var key in source) { if (Object.prototype.hasOwnProperty.call(source, key)) { target[key] = source[key]; } } } return target; }; // Module generated from Markdown by markdown-component-loader v0.0.2


var _react = require(\'react\');

var _react2 = _interopRequireDefault(_react);

var _package = require(\'./package.json\');

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

function MarkdownComponent(props) {
  var className = props.className;
  var style = props.style;
  var elementProps = props.elementProps;


  return _react2.default.createElement(
    \'div\',
    { className: className, style: style },
    _react2.default.createElement(
      \'p\',
      elementProps[\'p\'],
      \'This is a \',
      _react2.default.createElement(
        \'em\',
        elementProps[\'em\'],
        \'Markdown Component\'
      ),
      \' file. Here you can include JSX-style assignment expressions; this component was generated using version \',
      _package.version,
      \' of \',
      _package.name,
      \'!\'
    ),
    _react2.default.createElement(
      \'p\',
      elementProps[\'p\'],
      \'Props passed to this component are available as \',
      _react2.default.createElement(
        \'code\',
        elementProps[\'code\'],
        \'props\'
      ),
      \', so you can embed those too! Hello there, \',
      props.who || \'world\',
      \'!\'
    ),
    _react2.default.createElement(
      \'p\',
      elementProps[\'p\'],
      \'Another cool thing you can do is use JSX \',
      _react2.default.createElement(
        \'strong\',
        elementProps[\'strong\'],
        \'directly\'
      ),
      \' - here\\u2019s an SVG element, used inline: \',
      _react2.default.createElement(
        \'svg\',
        _extends({}, elementProps[\'svg\'], { style: { display: \'inline\', height: \'1em\' }, viewBox: \'0 0 304 290\' }),
        _react2.default.createElement(\'path\', _extends({}, elementProps[\'path\'], { fill: \'none\', stroke: \'currentColor\', strokeWidth: \'16\', d: \'M2,111 h300 l-242.7,176.3 92.7,-285.3 92.7,285.3 z\' }))
      ),
      \'.\'
    )
  );
};

MarkdownComponent.propTypes = {
  className: _react2.default.PropTypes.string,
  style: _react2.default.PropTypes.object,
  elementProps: _react2.default.PropTypes.object
};

MarkdownComponent.defaultProps = {
  elementProps: {}
};

exports.default = MarkdownComponent;"
`;

exports[`Webpack loader compiles with Babel without issue 11`] = `
"\'use strict\';

Object.defineProperty(exports, \"__esModule\", {
  value: true
});

var _react = require(\'react\');

var _react2 = _interopRequireDefault(_react);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

function MarkdownComponent(props) {
  var className = props.className;
  var style = props.style;
  var elementProps = props.elementProps;


  return _react2.default.createElement(\'div\', { className: className, style: style });
} // Module generated from Markdown by markdown-component-loader v0.0.2
;

MarkdownComponent.propTypes = {
  className: _react2.default.PropTypes.string,
  style: _react2.default.PropTypes.object,
  elementProps: _react2.default.PropTypes.object
};

MarkdownComponent.defaultProps = {
  elementProps: {}
};

exports.default = MarkdownComponent;"
`;

exports[`Webpack loader renders as expected within React 1`] = `
<div
  className={undefined}
  style={undefined}>
  <h1>
    Basic Markdown Template
  </h1>
  <p>
    This is a basic Markdown template, with no interpolations going on.
  </p>
  <p>
    This should be
  </p>
  <ul>
    <li>
      easy and;
    </li>
    <li>
      predictable!
    </li>
  </ul>
</div>
`;

exports[`Webpack loader renders as expected within React 2`] = `
<div
  className={undefined}
  style={undefined}>
  <h1>
    Here\'s a code snippet with no interpolations
  </h1>
  <pre>
    <code
      className="language-bash">
      npm install -g yarn
      <br />
    </code>
  </pre>
</div>
`;

exports[`Webpack loader renders as expected within React 3`] = `
<div
  className={undefined}
  style={undefined}>
  <h1>
    Here\'s a code snippet with things which shouldn\'t be treated as interpolations
  </h1>
  <pre>
    <code
      className="language-bash">
      <span
        className="hljs-keyword">
        function
      </span>
       
      <span
        className="hljs-function">
        <span
          className="hljs-title">
          rbenv
        </span>
      </span>
      () 
      {
      <br />
        RUBY=blah
      <br />
      }
      <br />
    </code>
  </pre>
</div>
`;

exports[`Webpack loader renders as expected within React 4`] = `
<div
  className={undefined}
  style={undefined}>
  <h1>
    Here\'s a paragraph with a simple interpolation
  </h1>
  <p>
    There are 
    1
     props being supplied to this component.
  </p>
</div>
`;

exports[`Webpack loader renders as expected within React 5`] = `
<div
  className={undefined}
  style={undefined}>
  <h1>
    Here\'s a code snippet with a simple interpolation
  </h1>
  <pre>
    <code
      className="language-bash">
      <span
        className="hljs-keyword">
        function
      </span>
       
      <span
        className="hljs-function">
        <span
          className="hljs-title">
          rbenv
        </span>
      </span>
      () 
      {
      <br />
        RUBY=
      <br />
      }
      <br />
    </code>
  </pre>
</div>
`;

exports[`Webpack loader renders as expected within React 6`] = `
<div
  className={undefined}
  style={undefined}>
  <h1>
    Here\'s an unhinted code snippet
  </h1>
  <pre>
    <code>
      <span
        className="hljs-keyword">
        the
      </span>
       quick brown fox jumps over 
      <span
        className="hljs-keyword">
        the
      </span>
       lazy dog
      <br />
    </code>
  </pre>
</div>
`;

exports[`Webpack loader renders as expected within React 7`] = `
<div
  className={undefined}
  style={undefined}>
  <h1>
    Here\'s an unhinted snippet with no discernible language
  </h1>
  <pre>
    <code>
      )
      <span
        className="hljs-comment">
        ()
      </span>
      <span
        className="hljs-comment">
        (()
      </span>
      )
      <br />
    </code>
  </pre>
</div>
`;

exports[`Webpack loader renders as expected within React 8`] = `
<div
  className={undefined}
  style={undefined}>
  <h1>
    Markdown Template
  </h1>
  <p>
    This is a 
    {Markdown}
     template!!! 
    {bar}
  </p>
  <pre>
    <code
      className="language-bash">
      brew tap buildkite/buildkite
      <br />
      brew install --token=
      <span
        className="hljs-string">
        \'
        INSERT-YOUR-AGENT-TOKEN-HERE
        \'
      </span>
       buildkite-agent
      <br />
      <span
        className="hljs-function">
        <span
          className="hljs-title">
          function
        </span>
      </span>
      () 
      {
      <br />
        ENV=
      <span
        className="hljs-string">
        \"foo_bar\"
      </span>
      <br />
      }
      <br />
    </code>
  </pre>
</div>
`;

exports[`Webpack loader renders as expected within React 9`] = `
<div
  className={undefined}
  style={undefined}>
  <h1>
    Markdown template with imports and interpolations
  </h1>
  <p>
    We\'re importing foo, which is 
    bar
    .
  </p>
  <p>
    We\'re also adding a react component here: 
    <foo
      0="b"
      1="a"
      2="z"
      style={
        Object {
          "foo": "bar",
        }
      } />
  </p>
</div>
`;

exports[`Webpack loader renders as expected within React 10`] = `
<div
  className={undefined}
  style={undefined}>
  <p>
    This is a 
    <em>
      Markdown Component
    </em>
     file. Here you can include JSX-style assignment expressions; this component was generated using version 
    0.0.2
     of 
    markdown-component-loader
    !
  </p>
  <p>
    Props passed to this component are available as 
    <code>
      props
    </code>
    , so you can embed those too! Hello there, 
    world
    !
  </p>
  <p>
    Another cool thing you can do is use JSX 
    <strong>
      directly
    </strong>
     - here’s an SVG element, used inline: 
    <svg
      style={
        Object {
          "display": "inline",
          "height": "1em",
        }
      }
      viewBox="0 0 304 290">
      <path
        d="M2,111 h300 l-242.7,176.3 92.7,-285.3 92.7,285.3 z"
        fill="none"
        stroke="currentColor"
        strokeWidth="16" />
    </svg>
    .
  </p>
</div>
`;

exports[`Webpack loader renders as expected within React 11`] = `
<div
  className={undefined}
  style={undefined} />
`;

exports[`Webpack loader returns an expected React module 1`] = `
"// Module generated from Markdown by markdown-component-loader v0.0.2
import React from \'react\';

function MarkdownComponent(props) {
  const {className, style, elementProps} = props;

  return (
    <div className={className} style={style}>
      <h1 {...elementProps[\'h1\']}>Basic Markdown Template</h1>
      <p {...elementProps[\'p\']}>This is a basic Markdown template, with no interpolations going on.</p>
      <p {...elementProps[\'p\']}>This should be</p>
      <ul {...elementProps[\'ul\']}>
      <li {...elementProps[\'li\']}>easy and;</li>
      <li {...elementProps[\'li\']}>predictable!</li>
      </ul>
    </div>
  );
};

MarkdownComponent.propTypes = {
  className: React.PropTypes.string,
  style: React.PropTypes.object,
  elementProps: React.PropTypes.object
};

MarkdownComponent.defaultProps = {
  elementProps: {}
};

export default MarkdownComponent;
"
`;

exports[`Webpack loader returns an expected React module 2`] = `
"// Module generated from Markdown by markdown-component-loader v0.0.2
import React from \'react\';

function MarkdownComponent(props) {
  const {className, style, elementProps} = props;

  return (
    <div className={className} style={style}>
      <h1 {...elementProps[\'h1\']}>Here\'s a code snippet with no interpolations</h1>
      <pre {...elementProps[\'pre\']}><code {...elementProps[\'code\']} className=\"language-bash\">npm install -g yarn<br {...elementProps[\'br\']} /></code></pre>
    </div>
  );
};

MarkdownComponent.propTypes = {
  className: React.PropTypes.string,
  style: React.PropTypes.object,
  elementProps: React.PropTypes.object
};

MarkdownComponent.defaultProps = {
  elementProps: {}
};

export default MarkdownComponent;
"
`;

exports[`Webpack loader returns an expected React module 3`] = `
"// Module generated from Markdown by markdown-component-loader v0.0.2
import React from \'react\';

function MarkdownComponent(props) {
  const {className, style, elementProps} = props;

  return (
    <div className={className} style={style}>
      <h1 {...elementProps[\'h1\']}>Here\'s a code snippet with things which shouldn\'t be treated as interpolations</h1>
      <pre {...elementProps[\'pre\']}><code {...elementProps[\'code\']} className=\"language-bash\"><span {...elementProps[\'span\']} className=\"hljs-keyword\">function</span> <span {...elementProps[\'span\']} className=\"hljs-function\"><span {...elementProps[\'span\']} className=\"hljs-title\">rbenv</span></span>() {\'{\'}<br {...elementProps[\'br\']} />  RUBY=blah<br {...elementProps[\'br\']} />{\'}\'}<br {...elementProps[\'br\']} /></code></pre>
    </div>
  );
};

MarkdownComponent.propTypes = {
  className: React.PropTypes.string,
  style: React.PropTypes.object,
  elementProps: React.PropTypes.object
};

MarkdownComponent.defaultProps = {
  elementProps: {}
};

export default MarkdownComponent;
"
`;

exports[`Webpack loader returns an expected React module 4`] = `
"// Module generated from Markdown by markdown-component-loader v0.0.2
import React from \'react\';

function MarkdownComponent(props) {
  const {className, style, elementProps} = props;

  return (
    <div className={className} style={style}>
      <h1 {...elementProps[\'h1\']}>Here\'s a paragraph with a simple interpolation</h1>
      <p {...elementProps[\'p\']}>There are {Object.keys(props).length} props being supplied to this component.</p>
    </div>
  );
};

MarkdownComponent.propTypes = {
  className: React.PropTypes.string,
  style: React.PropTypes.object,
  elementProps: React.PropTypes.object
};

MarkdownComponent.defaultProps = {
  elementProps: {}
};

export default MarkdownComponent;
"
`;

exports[`Webpack loader returns an expected React module 5`] = `
"// Module generated from Markdown by markdown-component-loader v0.0.2
import React from \'react\';

function MarkdownComponent(props) {
  const {className, style, elementProps} = props;

  return (
    <div className={className} style={style}>
      <h1 {...elementProps[\'h1\']}>Here\'s a code snippet with a simple interpolation</h1>
      <pre {...elementProps[\'pre\']}><code {...elementProps[\'code\']} className=\"language-bash\"><span {...elementProps[\'span\']} className=\"hljs-keyword\">function</span> <span {...elementProps[\'span\']} className=\"hljs-function\"><span {...elementProps[\'span\']} className=\"hljs-title\">rbenv</span></span>() {\'{\'}<br {...elementProps[\'br\']} />  RUBY={props.rubycontent}<br {...elementProps[\'br\']} />{\'}\'}<br {...elementProps[\'br\']} /></code></pre>
    </div>
  );
};

MarkdownComponent.propTypes = {
  className: React.PropTypes.string,
  style: React.PropTypes.object,
  elementProps: React.PropTypes.object
};

MarkdownComponent.defaultProps = {
  elementProps: {}
};

export default MarkdownComponent;
"
`;

exports[`Webpack loader returns an expected React module 6`] = `
"// Module generated from Markdown by markdown-component-loader v0.0.2
import React from \'react\';

function MarkdownComponent(props) {
  const {className, style, elementProps} = props;

  return (
    <div className={className} style={style}>
      <h1 {...elementProps[\'h1\']}>Here\'s an unhinted code snippet</h1>
      <pre {...elementProps[\'pre\']}><code {...elementProps[\'code\']}><span {...elementProps[\'span\']} className=\"hljs-keyword\">the</span> quick brown fox jumps over <span {...elementProps[\'span\']} className=\"hljs-keyword\">the</span> lazy dog<br {...elementProps[\'br\']} /></code></pre>
    </div>
  );
};

MarkdownComponent.propTypes = {
  className: React.PropTypes.string,
  style: React.PropTypes.object,
  elementProps: React.PropTypes.object
};

MarkdownComponent.defaultProps = {
  elementProps: {}
};

export default MarkdownComponent;
"
`;

exports[`Webpack loader returns an expected React module 7`] = `
"// Module generated from Markdown by markdown-component-loader v0.0.2
import React from \'react\';

function MarkdownComponent(props) {
  const {className, style, elementProps} = props;

  return (
    <div className={className} style={style}>
      <h1 {...elementProps[\'h1\']}>Here\'s an unhinted snippet with no discernible language</h1>
      <pre {...elementProps[\'pre\']}><code {...elementProps[\'code\']}>)<span {...elementProps[\'span\']} className=\"hljs-comment\">()</span><span {...elementProps[\'span\']} className=\"hljs-comment\">(()</span>)<br {...elementProps[\'br\']} /></code></pre>
    </div>
  );
};

MarkdownComponent.propTypes = {
  className: React.PropTypes.string,
  style: React.PropTypes.object,
  elementProps: React.PropTypes.object
};

MarkdownComponent.defaultProps = {
  elementProps: {}
};

export default MarkdownComponent;
"
`;

exports[`Webpack loader returns an expected React module 8`] = `
"// Module generated from Markdown by markdown-component-loader v0.0.2
import React from \'react\';

function MarkdownComponent(props) {
  const {className, style, elementProps} = props;

  return (
    <div className={className} style={style}>
      <h1 {...elementProps[\'h1\']}>Markdown Template</h1>
      <p {...elementProps[\'p\']}>This is a {\'{Markdown}\'} template!!! {props.foo || \'{bar}\'}</p>
      <pre {...elementProps[\'pre\']}><code {...elementProps[\'code\']} className=\"language-bash\">brew tap buildkite/buildkite<br {...elementProps[\'br\']} />brew install --token=<span {...elementProps[\'span\']} className=\"hljs-string\">\'{props.token || \'INSERT-YOUR-AGENT-TOKEN-HERE\'}\'</span> buildkite-agent<br {...elementProps[\'br\']} />
      <span {...elementProps[\'span\']} className=\"hljs-function\"><span {...elementProps[\'span\']} className=\"hljs-title\">function</span></span>() {\'{\'}<br {...elementProps[\'br\']} />  ENV=<span {...elementProps[\'span\']} className=\"hljs-string\">\"foo_bar\"</span><br {...elementProps[\'br\']} />{\'}\'}<br {...elementProps[\'br\']} /></code></pre>
    </div>
  );
};

MarkdownComponent.propTypes = {
  className: React.PropTypes.string,
  style: React.PropTypes.object,
  elementProps: React.PropTypes.object
};

MarkdownComponent.defaultProps = {
  elementProps: {}
};

export default MarkdownComponent;
"
`;

exports[`Webpack loader returns an expected React module 9`] = `
"// Module generated from Markdown by markdown-component-loader v0.0.2
import React from \'react\';
import foo from \'foo\';
import { foo as Bar, baz as bat } from \'another\';

function MarkdownComponent(props) {
  const {className, style, elementProps} = props;

  return (
    <div className={className} style={style}>
      <h1 {...elementProps[\'h1\']}>Markdown template with imports and interpolations</h1>
      <p {...elementProps[\'p\']}>We\'re importing foo, which is {foo}.</p>
      <p {...elementProps[\'p\']}>We\'re also adding a react component here: {<Bar {...bat} style={{ foo: \'bar\' }} />}</p>
    </div>
  );
};

MarkdownComponent.propTypes = {
  className: React.PropTypes.string,
  style: React.PropTypes.object,
  elementProps: React.PropTypes.object
};

MarkdownComponent.defaultProps = {
  elementProps: {}
};

export default MarkdownComponent;
"
`;

exports[`Webpack loader returns an expected React module 10`] = `
"// Module generated from Markdown by markdown-component-loader v0.0.2
import React from \'react\';
import { name, version } from \'./package.json\';

function MarkdownComponent(props) {
  const {className, style, elementProps} = props;

  return (
    <div className={className} style={style}>
      <p {...elementProps[\'p\']}>This is a <em {...elementProps[\'em\']}>Markdown Component</em> file. Here you can include JSX-style assignment expressions; this component was generated using version { version } of { name }!</p>
      <p {...elementProps[\'p\']}>Props passed to this component are available as <code {...elementProps[\'code\']}>props</code>, so you can embed those too! Hello there, { props.who || \'world\' }!</p>
      <p {...elementProps[\'p\']}>Another cool thing you can do is use JSX <strong {...elementProps[\'strong\']}>directly</strong> - here’s an SVG element, used inline: { <svg {...elementProps[\'svg\']} style={{ display: \'inline\', height: \'1em\' }} viewBox=\"0 0 304 290\"><path {...elementProps[\'path\']} fill=\"none\" stroke=\"currentColor\" strokeWidth=\"16\" d=\"M2,111 h300 l-242.7,176.3 92.7,-285.3 92.7,285.3 z\" /></svg> }.</p>
    </div>
  );
};

MarkdownComponent.propTypes = {
  className: React.PropTypes.string,
  style: React.PropTypes.object,
  elementProps: React.PropTypes.object
};

MarkdownComponent.defaultProps = {
  elementProps: {}
};

export default MarkdownComponent;
"
`;

exports[`Webpack loader returns an expected React module 11`] = `
"// Module generated from Markdown by markdown-component-loader v0.0.2
import React from \'react\';

function MarkdownComponent(props) {
  const {className, style, elementProps} = props;

  return (
    <div className={className} style={style}>
      {/* no input given */}
    </div>
  );
};

MarkdownComponent.propTypes = {
  className: React.PropTypes.string,
  style: React.PropTypes.object,
  elementProps: React.PropTypes.object
};

MarkdownComponent.defaultProps = {
  elementProps: {}
};

export default MarkdownComponent;
"
`;
